feat: docker compose and db scripts migration